<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум!</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="app_share">Поделиться приложением</string>
    <string name="support_chat">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="app_share_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="supportMessageSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportMessageText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="myEmail">an.nikit4@yandex.ru</string>
    <string name="searchError">Ничего не нашлось</string>
    <string name="connectionError">Проблемы со связью</string>
    <string name="loadError">Загрузка не удалась. Проверьте\n подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="searchHistory">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="release_date">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="trackTime">00:00</string>

</resources>