<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingStart="16dp"
        android:paddingTop="14dp"
        android:paddingEnd="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop = "4dp"
            android:paddingLeft = "4dp"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/mainActText" />



    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="402dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/mainActText"
            android:foreground="?attr/selectableItemBackground"


            app:cornerRadius="@dimen/mainButtonCorner"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/mainIconPadding"
            app:iconSize="@dimen/mainIconSize"
            app:iconTint="@color/mainIconTint"

            />

        <Button
            android:id="@+id/button_library"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/library"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/mainActText"
            app:cornerRadius="@dimen/mainButtonCorner"
            android:foreground="?attr/selectableItemBackground"

            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/mainIconPadding"
            app:iconSize="@dimen/mainIconSize"
            app:iconTint="@color/mainIconTint"

            />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/mainActText"
            app:cornerRadius="@dimen/mainButtonCorner"
            android:foreground="?attr/selectableItemBackground"

            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/mainIconPadding"
            app:iconSize="@dimen/mainIconSize"
            app:iconTint="@color/mainIconTint" />
    </LinearLayout>

</LinearLayout>